gitops/bootstrap/deploy/sepsisdetection-sse/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sepsisdetection-sse
    app.kubernetes.io/managed-by: quarkus
  name: sepsisdetection-sse
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: sepsisdetection-sse
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sepsisdetection-sse
    app.kubernetes.io/managed-by: quarkus
  name: sepsisdetection-sse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sepsisdetection-sse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sepsisdetection-sse
        app.kubernetes.io/managed-by: quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/redhat_naps_da/sepsisdetection-sse:0.0.5
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: sepsisdetection-sse
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
