gitops/bootstrap/deploy/sepsisdetection-sse/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sepsisdetection-sse
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: sepsisdetection-sse
  wildcardPolicy: None
